assets/styles/section-styles.css
.section {
  margin: 20px auto;
}

.section-header {
  border-bottom: 1px solid var(--unhas-red);
  margin-bottom: 8px;
}
.section-header__inner-container {
  display: flex;
  gap: 16px;
  margin: 8px 0;
  align-items: center;
  color: var(--unhas-red);
}

.section-header h1 {
  font-size: 2.25rem;
}

.right-arrow {
  width: 20px;
  height: 20px;
}

.section__news-item__thumbnail {
  width: 100%;
  object-fit: cover;
}

.section__news-item-desc {
  font-size: 0.75rem;
  line-height: 150%;
  margin: 0;
}

/* two columns feature left */
.template--two-columns-feature-left__inner-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 0 16px;
}
.template--two-columns-feature-left .section__news-item {
  padding: 8px 0;
}
.template--two-columns-feature-left
  .section__news-item
  .section__news-item__title {
  font-size: 1rem;
}
.template--two-columns-feature-left
  .section__news-item--feature
  .section__news-item__title {
  font-size: 2rem;
}
.template--two-columns-feature-left .section__news-item__link {
  position: relative;
  display: grid;
  grid-template-columns: auto 150px;
  grid-gap: 8px;
  height: 100%;
}
.template--two-columns-feature-left .section__news-item:nth-child(2),
.template--two-columns-feature-left .section__news-item:nth-child(3),
.template--two-columns-feature-left .section__news-item:nth-child(4),
.template--two-columns-feature-left .section__news-item:nth-child(5) {
  border-bottom: 1px solid var(--dark-gray);
}
.template--two-columns-feature-left
  .section__news-item--feature
  .section__news-item__link {
  position: relative;
  display: block;
  height: 100%;
}
.template--two-columns-feature-left .section__news-item--feature {
  position: relative;
  z-index: 1;
}
.template--two-columns-feature-left .section__news-item--feature {
  grid-area: 1 / 1 / 3 / 1;
  border-radius: 0;
  overflow: hidden;
}
.template--two-columns-feature-left .section__news-item-desc {
  margin-bottom: auto;
}
.template--two-columns-feature-left
  .section__news-item--feature
  .section__news-item__thumbnail {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
}
.template--two-columns-feature-left
  .section__news-item
  .section__news-item__thumbnail {
  height: 100%;
  border-radius: 0;
}
.template--two-columns-feature-left .section__news-item__meta-container {
  position: relative;
  display: flex;
  height: 100%;
  flex-direction: column;
  gap: 8px;
}
.template--two-columns-feature-left .section__news-item__meta-container p {
  margin: 0;
  font-size: 0.875rem;
}
.template--two-columns-feature-left
  .section__news-item--feature
  .section__news-item__meta-container {
  position: relative;
  display: flex;
  height: 100%;
  padding: 10px;
  color: var(--light-gray);
  flex-direction: column;
  justify-content: end;
  z-index: 3;
}

/* three columns feature center */
.template--three-columns-feature-center__inner-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 0 16px;
}
.template--three-columns-feature-center
  .section__news-item
  .section__news-item__title {
  font-size: 1rem;
}
.template--three-columns-feature-center
  .section__news-item--feature
  .section__news-item__title {
  font-size: 2rem;
}
.template--three-columns-feature-center .section__news-item {
  padding: 8px 0;
}
.template--three-columns-feature-center .section__news-item:nth-child(-n + 3) {
  padding-top: 0;
}
.template--three-columns-feature-center .section__news-item:nth-child(6),
.template--three-columns-feature-center .section__news-item:nth-child(7) {
  padding-bottom: 0;
}
.template--three-columns-feature-center .section__news-item__link {
  position: relative;
  display: grid;
  grid-template-columns: auto 50%;
  grid-gap: 8px;
}
.template--three-columns-feature-center .section__news-item:nth-child(2),
.template--three-columns-feature-center .section__news-item:nth-child(3),
.template--three-columns-feature-center .section__news-item:nth-child(4),
.template--three-columns-feature-center .section__news-item:nth-child(5) {
  border-bottom: 1px solid var(--dark-gray);
}
.template--three-columns-feature-center
  .section__news-item--feature
  .section__news-item__link {
  position: relative;
  display: block;
  height: 100%;
}
.template--three-columns-feature-center .section__news-item--feature {
  position: relative;
  z-index: 1;
}
.template--three-columns-feature-center .section__news-item--feature {
  grid-area: 1 / 2 / 4 / 4;
  border-radius: 0;
  overflow: hidden;
}
.template--three-columns-feature-center
  .section__news-item--feature
  .section__news-item__thumbnail {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
}
.template--three-columns-feature-center
  .section__news-item
  .section__news-item__thumbnail {
  height: 125px;
  border-radius: 0;
}
.template--three-columns-feature-center .section__news-item__meta-container {
  position: relative;
  display: flex;
  height: 100%;
  flex-direction: column;
  gap: 8px;
}
.template--three-columns-feature-center
  .section__news-item--feature
  .section__news-item__meta-container {
  position: relative;
  display: flex;
  height: 100%;
  padding: 10px;
  color: var(--light-gray);
  flex-direction: column;
  justify-content: end;
  z-index: 3;
}

/* three columns feature left */
.template--three-columns-feature-left__inner-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 0 16px;
}
.template--three-columns-feature-left .section__news-item {
  padding: 8px 0;
}
.template--three-columns-feature-left .section__news-item:nth-child(2),
.template--three-columns-feature-left .section__news-item:nth-child(3) {
  padding-top: 0;
}
.template--three-columns-feature-left .section__news-item:nth-child(4),
.template--three-columns-feature-left .section__news-item:nth-child(5) {
  border-top: 1px solid var(--dark-gray);
  border-bottom: 1px solid var(--dark-gray);
}
.template--three-columns-feature-left .section__news-item:nth-child(6),
.template--three-columns-feature-left .section__news-item:nth-child(7) {
  padding-bottom: 0;
}
.template--three-columns-feature-left .section__news-item__link {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 8px;
}
.template--three-columns-feature-left
  .section__news-item--feature
  .section__news-item__link {
  position: relative;
  display: block;
  height: 100%;
}
.template--three-columns-feature-left .section__news-item--feature {
  position: relative;
  z-index: 1;
}
.template--three-columns-feature-left .section__news-item--feature {
  grid-area: 1 / 1 / 4 / 1;
  border-radius: 0;
  overflow: hidden;
}
.template--three-columns-feature-left
  .section__news-item--feature
  .section__news-item__thumbnail {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
}
.template--three-columns-feature-left
  .section__news-item
  .section__news-item__thumbnail {
  height: 125px;
  border-radius: 0;
}
.template--three-columns-feature-left
  .section__news-item
  .section__news-item__meta-container {
  position: relative;
  display: flex;
  height: 100%;
  gap: 8px;
  flex-direction: column;
  z-index: 3;
}
.template--three-columns-feature-left
  .section__news-item--feature
  .section__news-item__meta-container {
  position: relative;
  display: flex;
  height: 100%;
  padding: 10px;
  gap: 8px;
  color: var(--light-gray);
  flex-direction: column;
  justify-content: end;
  z-index: 3;
}

/* single row slideshow styles */
.template--single-row-slideshow__inner {
  position: relative;
}
#template--singlerow-slideshow__slider-container {
  overflow-x: auto;
  scroll-behavior: smooth;
  display: flex;
  gap: 16px;
}
#template--singlerow-slideshow__slider-container::-webkit-scrollbar {
  display: none;
}
.template--single-row-slideshow .section__news-item {
  flex: 0 0 250px;
  display: flex;
  flex-direction: column;
  gap: 4px;
}
.template--single-row-slideshow .section__news-item__thumbnail {
  height: 150px;
  aspect-ratio: 16 / 9;
  object-fit: cover;
  border-radius: 0;
}
.template--single-row-slideshow .section__news-item__title {
  font-size: 1rem;
}

/* video gallery styles */
.template--video-gallery__inner {
  display: grid;
  grid-template-columns: 3fr 1fr;
  background-color: var(--ultra-dark-gray);
  color: var(--light-gray);
}

.template--video-gallery__inner .section__news-item__title {
  font-size: 2rem;
  font-weight: 700;
}

.template--video-gallery__inner .section__news-item__meta {
  padding: 16px;
}

.template--video-gallery__inner .section__news-item__thumbnail {
  width: 100%;
  height: auto;
}
.template--video-gallery__inner
  .section__news-item--feature
  .section__news-item__thumbnail {
  max-height: 450px;
  aspect-ratio: 16 / 9;
  object-fit: cover;
}

.video-gallery__video-list-container {
  padding: 8px;
  overflow: auto;
  scroll-behavior: smooth;
  max-height: 600px;
  display: flex;
  flex-direction: column;
  gap: 16px;
}
.video-gallery__video-list-container::-webkit-scrollbar {
  width: 12px;
}

.video-gallery__video-list-container::-webkit-scrollbar-track {
  background: var(--ultra-dark-gray);
}

.video-gallery__video-list-container::-webkit-scrollbar-thumb {
  background-color: var(--unhas-red);
  border-radius: 6px;
  border: 3px solid var(--ultra-dark-gray);
}
.video-gallery__video {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 4px;
}
.video-gallery__thumbnail {
  width: 100%;
  height: auto;
  object-fit: cover;
  border-radius: 6px;
  aspect-ratio: 16 / 9;
}
.video-gallery__title {
  font-size: 0.875rem;
}

